--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
     
 
     <div class="tool-card danger">
-      <a href="public/ban.html">🚫 Ban Tool - Dangerous For Whatsapp ban</a>
+      <a href="ban.html">🚫 Ban Tool - Dangerous For Whatsapp ban</a>
     </div>
     <div class="tool-card">
       <a href="public/unban1.html">✅ Unban Tool version one </a>
