--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 <div class="tool-card">
   <h2>UNBAN V1</h2>
   <p>very powerful tool for ubanning WhatsApp accounts. leacked for free</p>
-  <a href="unban.html">Open Tool</a>
+  <a href="unban1.html">Open Tool</a>
 </div>
     <div class="tool-card">
   <h2>UNBAN V2</h2>
@@ -142,7 +142,7 @@
 <div class="tool-card">
   <h2>URL SHORTER</h2>
   <p>tool for shortening url. leacked for free</p>
-  <a href="unban.html">Open Tool</a>
+  <a href="url.html">Open Tool</a>
 </div>
     <div class="server-note">
      <p>read rules first before using any tool here.</p>
