--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,18 @@
       font-size: 0.9rem;
       opacity: 0.7;
     }
-
+.status-panel {
+  margin: 1.5rem auto;
+  max-width: 500px;
+  background: rgba(255,255,255,0.05);
+  padding: 1rem 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #00c6ff;
+  font-family: monospace;
+  font-size: 1rem;
+  line-height: 1.8;
+  color: #ffffff;
+}
     .server-note {
       margin-top: 2rem;
       padding: 1rem;
@@ -119,11 +130,22 @@
 <body>
   <h1>💀 TERMINATOR TOOLS</h1>
   <p>created by James x terminator programmers:</p>
+
   <input type="text" id="username" placeholder="Your name" />
   <button onclick="submitUsername()">Continue</button>
 
   <div class="tools-section" id="tools">
   
+   <div class="tool-card">
+  <h2>MUSIC DOWNLOADER</h2>
+  <p> download any music for free </p>
+  <a href="play.html">Open Tool</a>
+</div>
+   <div class="tool-card">
+  <h2>HTML PREMIUM RUNNER</h2>
+  <p>very powerful and awesome tool for running html codes and projects</p>
+  <a href="run.html">Open Tool</a>
+</div>
     <div class="tool-card">
   <h2>BAN V1</h2>
   <p>very dangerous tool for banning WhatsApp accounts. leacked for free</p>
@@ -144,6 +166,13 @@
   <p>tool for shortening url. leacked for free</p>
   <a href="url.html">Open Tool</a>
 </div>
+  <div class="status-panel">
+    <div><strong> Server RAM:</strong> 8 GB</div>
+    <div><strong> Total Users:</strong> 729</div>
+    <div><strong>people viewing:</strong> 42</div>
+    <div><strong> Last Updated:</strong> August 5, 2025</div>
+    <div><strong> Nairobi Time:</strong> <span id="nairobi-time">Loading...</span></div>
+  </div>
     <div class="server-note">
      <p>read rules first before using any tool here.</p>
       Do not abuse tools
@@ -171,6 +200,18 @@
   </footer>
 
   <script>
+  function updateNairobiTime() {
+    const now = new Date();
+    const nairobiOffset = 3 * 60; // UTC+3 for Nairobi
+    const localOffset = now.getTimezoneOffset(); // in minutes
+    const nairobiTime = new Date(now.getTime() + (nairobiOffset + localOffset) * 60000);
+    const timeString = nairobiTime.toLocaleTimeString('en-KE', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
+    document.getElementById("nairobi-time").textContent = timeString;
+  }
+
+  setInterval(updateNairobiTime, 1000);
+  updateNairobiTime();
+
     async function submitUsername() {
       const name = document.getElementById('username').value.trim();
       if (!name) return alert("Enter a valid username!");
