--- a/public/index.html
+++ b/public/index.html
@@ -128,104 +128,7 @@
   </style>
 </head>
 <body>
-  <h1>💀 TERMINATOR TOOLS</h1>
-  <p>created by James x terminator programmers:</p>
+  <h1>BRO RETIRED</h1>
 
-  <input type="text" id="username" placeholder="Your name" />
-  <button onclick="submitUsername()">Continue</button>
-
-  <div class="tools-section" id="tools">
-  
-   <div class="tool-card">
-  <h2>MUSIC DOWNLOADER</h2>
-  <p> download any music for free </p>
-  <a href="play.html">Open Tool</a>
-</div>
-   <div class="tool-card">
-  <h2>HTML PREMIUM RUNNER</h2>
-  <p>very powerful and awesome tool for running html codes and projects</p>
-  <a href="run.html">Open Tool</a>
-</div>
-    <div class="tool-card">
-  <h2>BAN V1</h2>
-  <p>very dangerous tool for banning WhatsApp accounts. leacked for free</p>
-  <a href="ban.html">Open Tool</a>
-</div>
-<div class="tool-card">
-  <h2>UNBAN V1</h2>
-  <p>very powerful tool for ubanning WhatsApp accounts. leacked for free</p>
-  <a href="unban1.html">Open Tool</a>
-</div>
-    <div class="tool-card">
-  <h2>UNBAN V2</h2>
-  <p>very powerful tool for unbanning WhatsApp accounts. leacked for free</p>
-  <a href="unban.html">Open Tool</a>
-</div>
-<div class="tool-card">
-  <h2>URL SHORTER</h2>
-  <p>tool for shortening url. leacked for free</p>
-  <a href="url.html">Open Tool</a>
-</div>
-  <div class="status-panel">
-    <div><strong> Server RAM:</strong> 8 GB</div>
-    <div><strong> Total Users:</strong> 729</div>
-    <div><strong>people viewing:</strong> 42</div>
-    <div><strong> Last Updated:</strong> August 5, 2025</div>
-    <div><strong> Nairobi Time:</strong> <span id="nairobi-time">Loading...</span></div>
-  </div>
-    <div class="server-note">
-     <p>read rules first before using any tool here.</p>
-      Do not abuse tools
-    </div>
-
-    <div class="socials">
-      <a href="https://t.me/trustedjamestechke" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" width="32" />
-      </a>
-      <a href="https://whatsapp.com/channel/0029VaogSY74IBhJWe8b472H" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" width="32" />
-      </a>
-      <a href="https://github.com" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" width="32" />
-      </a>
-      <!-- YouTube -->
-  <a href="https://youtube.com/@james-j2i9h" target="_blank" title="YouTube Channel">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" width="32" />
-  </a>
-    </div>
-  </div>
-
-  <footer>
-    &copy; 2025 Terminator Team. All Rights Reserved.
-  </footer>
-
-  <script>
-  function updateNairobiTime() {
-    const now = new Date();
-    const nairobiOffset = 3 * 60; // UTC+3 for Nairobi
-    const localOffset = now.getTimezoneOffset(); // in minutes
-    const nairobiTime = new Date(now.getTime() + (nairobiOffset + localOffset) * 60000);
-    const timeString = nairobiTime.toLocaleTimeString('en-KE', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
-    document.getElementById("nairobi-time").textContent = timeString;
-  }
-
-  setInterval(updateNairobiTime, 1000);
-  updateNairobiTime();
-
-    async function submitUsername() {
-      const name = document.getElementById('username').value.trim();
-      if (!name) return alert("Enter a valid username!");
-
-      await fetch('/log-user', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username: name })
-      });
-
-      document.querySelector('input').style.display = 'none';
-      document.querySelector('button').style.display = 'none';
-      document.querySelector('#tools').style.display = 'block';
-    }
-  </script>
 </body>
 </html>
